[tool.poetry]
name = "fomc-stance-tracker"
version = "0.1.0"
description = "FOMC Participant Stance Tracker - Hawkish/Dovish Classification"
authors = ["boo"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
duckduckgo-search = ">=6.0"
feedparser = "^6.0"
beautifulsoup4 = "^4.12"
requests = "^2.31"
pandas = "^2.2"
streamlit = "^1.40"
plotly = "^5.24"
python-dotenv = "^1.0"
lxml = "^5.0"
google-genai = ">=1.0"
langchain-openai = ">=0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
black = "^24"
ruff = "^0.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
